# dspy-dev-assistant

./: .editorconfig  .gitignore  .markdownlint.json  AGENTS.md  CLAUDE.md  GEMINI.MD  GEMINI.md  LICENSE  README.md  agent-rules  devcontainer.json  main.py  mockup-scaffold.md  pyproject.toml  requirements.txt  settings.json
agent-rules/: README.md
agent_rules/: DSPY_RULES.md
agent_rules/components/decomposition/: modules.py  rules.yaml  signatures.py
agent_rules/components/execution/: modules.py  rules.yaml  signatures.py
agent_rules/components/persistence/: modules.py  rules.yaml  signatures.py
agent_rules/components/pipelines/: plan_verify_execute.py
agent_rules/components/planning/: modules.py  rules.yaml  signatures.py
agent_rules/components/verification/: modules.py  rules.yaml  signatures.py
agent_rules/global/: README.md  rules.global.yaml
agent_rules/project/: DSPY_RULES.md  rules.project.yaml
agent_rules/tests/: test_modules_runtime.py  test_rules_validation.py
agent_rules/tools/lint/: rules_lint.py
agent_rules/tools/migration/: emit_dspy.py  generate_examples.py  load_legacy.py  migrate.py  validate.py
docs/: mockup-scaffold.md  roadmap.md
docs/agent-rules/: .gitignore  README.md
docs/agent-rules/dspy/: DSPY_RULES.md  architecture.md
docs/agent-rules/legacy-rules/global/: github-issue-creation.mdc
docs/ai_docs/: DSPy_Main_System_Instructions.md  DSPy_Master_Router.md  DSPy_Modules_Explainer.md  DSPy_Optimization_Explainer.md  DSPy_Overview.md  DSPy_Pipelines_Composition_Explainer.md  DSPy_Signatures_Explainer.md
dspy-dev-assistant/: .gitignore  README.md  pyproject.toml
dspy-dev-assistant-demo/: mockup-scaffold.md
dspy-dev-assistant-demo/src/dspy_dev/: config.py
dspy-dev-assistant-demo/src/dspy_dev/optimization/: compile.py
dspy-dev-assistant-demo/src/dspy_dev/refactor/: signatures.py
dspy-dev-assistant-demo/src/dspy_dev/testgen/: pipeline.py  signatures.py
dspy-dev-assistant-demo/src/dspy_dev/verify/: modules.py  pipeline.py
dspy-dev-assistant-demo/tests/: test_smoke.py
dspy-dev-assistant/docs/: SECURITY.md
dspy-dev-assistant/src/dspy_dev/: __init__.py  cli.py  config.py
dspy-dev-assistant/src/dspy_dev/optimization/: eval.py
dspy-dev-assistant/src/dspy_dev/refactor/: modules.py  pipeline.py  rules.py
dspy-dev-assistant/src/dspy_dev/verify/: pipeline.py
src/dspy_dev/: cli.py  config.py
src/dspy_dev/refactor/: pipeline.py
src/dspy_dev/testgen/: modules.py
src/dspy_dev/utils/: patches.py
src/dspy_dev/verify/: pipeline.py  signatures.py
tests/: test_smoke.py
