[project]
name = "dspy-dev-assistant"
version = "0.1.0"
description = "DSPy-powered developer assistant for refactoring, agentic test generation, and web-aware verification."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "", email = "email@email.com" }]
dependencies = [
  "dspy",
  "typer",
  "rich",
  "httpx",
  "beautifulsoup4",
  "pydantic",
  "libcst"
]

[project.urls]
homepage = "https://github.com/acidicsoil/dspy-dev-assistant"
repository = "https://github.com/acidicsoil/dspy-dev-assistant"

[project.scripts]
dspy-dev = "dspy_dev.cli:app"

[tool.uv]
# uv will read dependencies from [project] and dev-dependencies below.

[tool.uv.sources]
# Example: pin private indexes or mirrors if needed.

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

line-length = 120
target-version = "py312"
select = ["E","F","I","UP","N","B"]
indent-width = 4

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`) codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E4", "E7", "E9", "F", "B"]
ignore = ["E501"]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = ["B"]

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
exclude = ["*.ipynb"]


[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

exclude = ["*.pyi"]
# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
